--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="/src/img/logo.png" type="Logo Apple">
+    <link rel="stylesheet" href="style.css">
+    <title>Apple</title>
 </head>
 <body>
     
