--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Apple</title>
 </head>
 <body>
+    <header>
+        <nav class="navigation">
+            <a href="#"><img src="/src/img/logo.png" alt="Logo"></a>
+            <ul>
+                <li><a href="#">Mac</a></li>
+                <li><a href="#">Mac</a></li>
+                <li><a href="#">Mac</a></li>
+                <li><a href="#">Mac</a></li>
+                <li><a href="#">Mac</a></li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
