--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <main>
         <section>
+            <div class="circle"></div>
             <div class="main-text">
                 <img src="src/img/iphone13.png" alt="">
                 
@@ -46,12 +47,12 @@
                 </div>
 
                 <div class="content">
-                    <span id="green"></span>
-                    <span id="pink"></span>
-                    <span id="blue"></span>
-                    <span id="black"></span>
-                    <span id="white"></span>
-                    <span id="red"></span>
+                    <span id="green" onclick="imgSlider('/src/img/green.png'); circleChange('#445c42')"></span>
+                    <span id="pink" onclick="imgSlider('/src/img/pink.png') ; circleChange('#f8ddd6')"></span>
+                    <span id="blue" onclick="imgSlider('/src/img/blue.png'); circleChange('#225f7e')"></span>
+                    <span id="black" onclick="imgSlider('/src/img/black.png'); circleChange('#092732')"></span>
+                    <span id="white" onclick="imgSlider('/src/img/white.png'); circleChange('white')"></span>
+                    <span id="red" onclick="imgSlider('/src/img/red.png'); circleChange('#ae0617')"></span>
                 </div>
 
             </div>
@@ -63,5 +64,19 @@
         </section>
     </main>
     
+    <script type="text/javascript">
+        function imgSlider(e)
+        {
+        document.querySelector('#phone').src = e;
+        }
+
+        function circleChange(color)
+        {
+            const circle = document.querySelector('.circle')
+            circle.style.background = color;
+        }
+    </script>
+
+
 </body>
 </html>
