--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/src/img/logo.png" type="Logo Apple">
+    <link rel="shortcut icon" href="logo.png" type="Logo Apple">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
     <title>iPhone - Apple (BR)</title>
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="navigation">
-            <a href="#"><img src="/src/img/logo.png" alt="Logo" class="Logo"></a>
+            <a href="#"><img src="logo.png" alt="Logo" class="Logo"></a>
             <ul>
                 <li><a href="#">Mac</a></li>
                 <li><a href="#">iPad</a></li>
@@ -32,7 +32,7 @@
         <section>
             <div class="circle"></div>
             <div class="main-text">
-                <img src="src/img/iphone13.png" alt="">
+                <img src="iphone13.png" alt="">
                 
                 <h3>Seu novo superpoder.</h3>
                 Chip com velocidade impressionante. Um aumento notável na duração da bateria. E novos recursos de foto e vídeo. 
@@ -47,18 +47,18 @@
                 </div>
 
                 <div class="content">
-                    <span id="green" onclick="imgSlider('/src/img/green.png'); circleChange('#445c42')"></span>
-                    <span id="pink" onclick="imgSlider('/src/img/pink.png') ; circleChange('#f8ddd6')"></span>
-                    <span id="blue" onclick="imgSlider('/src/img/blue.png'); circleChange('#225f7e')"></span>
-                    <span id="black" onclick="imgSlider('/src/img/black.png'); circleChange('#092732')"></span>
-                    <span id="white" onclick="imgSlider('/src/img/white.png'); circleChange('white')"></span>
-                    <span id="red" onclick="imgSlider('/src/img/red.png'); circleChange('#ae0617')"></span>
+                    <span id="green" onclick="imgSlider('green.png'); circleChange('#445c42')"></span>
+                    <span id="pink" onclick="imgSlider('pink.png') ; circleChange('#f8ddd6')"></span>
+                    <span id="blue" onclick="imgSlider('blue.png'); circleChange('#225f7e')"></span>
+                    <span id="black" onclick="imgSlider('black.png'); circleChange('#092732')"></span>
+                    <span id="white" onclick="imgSlider('white.png'); circleChange('white')"></span>
+                    <span id="red" onclick="imgSlider('red.png'); circleChange('#ae0617')"></span>
                 </div>
 
             </div>
 
             <div class="main-img">
-                <img src="/src/img/green.png" alt="Imagem do iPhone" id="phone">
+                <img src="green.png" alt="Imagem do iPhone" id="phone">
 
             </div>
         </section>
