Criação da pagina "iPad"

--- a/index.html
+++ b/index.html
@@ -9,24 +9,8 @@
     <title>iPhone - Apple (BR)</title>
 </head>
 <body>
-    <header id="main-header">
-        <nav class="navigation">
-            <a href="#"><img src="logo.png" alt="Logo" class="Logo"></a>
-            <ul>
-                <li><a>Mac</a></li>
-                <li><a href="#">iPad</a></li>
-                <li><a href="#" data-color="header-white" data-text-class="text-black" class="check">iPhone</a></li>
-                <li><a href="#">Watch</a></li>
-                <li><a href="#">AirPods</a></li>
-                <li><a href="#">Só na Apple</a></li>
-                <li><a href="#">Suporte</a></li>
-                <li><a href="#"><i class="bi bi-search"></i></a></li>
-                <li><a href="#"><i class="bi bi-bag"></i></a></li>
+    <div id="header"></div>
 
-
-            </ul>
-        </nav>
-    </header>
 
     <main>
         <section>
@@ -61,8 +45,8 @@
                           onmouseover="imgSlider('black.png'); circleChange('#092732')" 
                           onclick="imgSlider('black.png'); circleChange('#092732')"></span>
                     <span id="white"
-                          onmouseover="imgSlider('white.png'); circleChange('white')" 
-                          onclick="imgSlider('white.png'); circleChange('white')"></span>
+                          onmouseover="imgSlider('white.png'); circleChange('#e0dbd7')" 
+                          onclick="imgSlider('white.png'); circleChange('#e0dbd7')"></span>
                     <span id="red"
                           onmouseover="imgSlider('red.png'); circleChange('#ae0617')" 
                           onclick="imgSlider('red.png'); circleChange('#ae0617')"></span>
