--- a/home.html
+++ b/home.html
@@ -37,7 +37,26 @@
         </section>
 
         <section class="Conteudo">
-            <h1>texto alternativo</h1>
+            <div class="text-conteudo">
+                <h1>Conheça o iPad.
+                    <br>
+                    Ele se reinventou.
+                </h1>
+    
+                <p>O iPad foi redesenhado para ser mais intuitivo, versátil e<br>
+                     ainda mais divertido. Com tela Liquid Retina de<br>
+                      10,9 polegadas de ponta a ponta e disponível em <br>
+                      quatro cores vibrantes, o iPad é ideal para realizar tarefas,<br>
+                       soltar a criatividade e manter a conexão com quem você<br> 
+                       ama. Adicione acessórios indispensáveis criados<br> 
+                       especialmente para o iPad e aproveite a versatilidade para<br>
+                        fazer tudo que você mais gosta.</p>
+
+                        <div class="img-ipad">
+                            <img src="ipads (2).png" alt="">
+                        </div>
+            </div>
+            
         </section>
     </main>
 
