--- a/home.html
+++ b/home.html
@@ -36,7 +36,8 @@
             
         </section>
 
-        <section class="Conteudo">
+        <section>
+            
             <div class="text-conteudo">
                 <h1>Conheça o iPad.
                     <br>
