--- a/header.html
+++ b/header.html
@@ -6,7 +6,16 @@
         <ul>
             <li><a>Mac</a></li>
             <li><a href="home.html">iPad</a></li>
-            <li><a href="index.html" data-color="header-white" data-text-class="text-black" >iPhone</a></li>
+            
+            <li class="dropdown"><a href="index.html">iPhone</a>
+                <div class="dropdown-menu">
+                    <a href="#">iPhone13</a>
+                    <a href="#">iPhone14</a>
+                    <a href="#">iPhone15</a>
+                    <a href="#">iPhone16</a>
+                </div>
+            
+            </li>
             <li><a href="#">Watch</a></li>
             <li><a href="#">AirPods</a></li>
             <li><a href="#">Só na Apple</a></li>
