Atualização no menu principal

--- a/header.html
+++ b/header.html
@@ -2,12 +2,12 @@
 <!-- header.html -->
 <header id="main-header">
     <nav class="navigation">
-        <a href="/"><img src="logo.png" alt="Logo" class="Logo"></a>
+        <a href="index.html"><img src="logo.png" alt="Logo" class="Logo"></a>
         <ul>
             <li><a>Mac</a></li>
-            <li><a href="home.html">iPad</a></li>
+            <li><a href="iPad.html">iPad</a></li>
             
-            <li class="dropdown"><a href="index.html">iPhone</a>
+            <li class="dropdown"><a href="iPhone.html">iPhone</a>
                 <div class="dropdown-menu">
                     <a href="#">iPhone13</a>
                     <a href="#">iPhone14</a>
